[package]
name = "ndn-tlv"
description = "Encoding and Decoding of TLV values for Named Data Networking"
version = "0.4.0"
edition = "2021"
license = "MIT"
categories = ["network-programming", "parsing"]
keywords = ["ndn", "named", "data", "networking", "tlv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
thiserror = "1.0.56"
ndn-tlv-derive = { version = "0.4.0", path = "../ndn-tlv-derive" }
derive_more = "0.99.17"
